[package]
name = "vimvar"
description = "Library that provides ability to read neovim/vim variables"
version = "0.2.0"
authors = ["Chip Senkbeil <chip@senkbeil.org>"]
edition = "2018"
homepage = "https://github.com/chipsenkbeil/vimvar-rs"
repository = "https://github.com/chipsenkbeil/vimvar-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
serde = "1.0"
serde_json = "1.0"
shellexpand = "2.1.0"

[dev-dependencies]
tempfile = "3.2.0"
